TWC3167-4434,TWC3167-4529,TWC3167-4568 : Admin- Customer, Geo, Product Hierarchy, text color changes and Cap Info is not properly visible defect fix. (#1713)

--- a/Intel.MyDeals/Client/src/app/dashboard/dashboard/dashboard.component.css
+++ b/Intel.MyDeals/Client/src/app/dashboard/dashboard/dashboard.component.css
@@ -265,3 +265,9 @@ button.warn-custom {
 gridster-item.attr-li-7 .k-grid-table-wrap contract-status-board-angular .k-grid-table-wrap {
     height: auto !important;
 }
+
+.changedragcolor.k-grid .k-indicator-container {
+    margin: -0.375rem 0 !important;
+    padding: 0.375rem 0 !important;
+    color: #00aeef !important;
+}
